--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1 class="name">Mahianul Islam Anas</h1>
       <p class="title">Full Stack Developer</p>
       <p class="description">
-        MERN Stack ও Next.js দিয়ে modern web applications তৈরি করি ।
-        TypeScript, Redux, এবং cloud deployment এ expert।
+        I will create a modern web app using MERN Stack and Next.js ||
+        TypeScript || Redux || Redis || |
       </p>
 
       <div class="skills">
